--- a/docs/framework/winforms/controls/toc.yml
+++ b/docs/framework/winforms/controls/toc.yml
@@ -1181,7 +1181,7 @@
           href: walkthrough-authoring-a-composite-control-with-visual-csharp.md
         - name: 'Procedura dettagliata: Ereditare da un controllo'
           href: walkthrough-inheriting-from-a-windows-forms-control-with-visual-csharp.md
-        - name: 'Procedura dettagliata: Eseguire attività comuni usando gli smart tag'
+        - name: 'Procedura dettagliata: Eseguire attività comuni usando le azioni di progettazione'
           href: perform-common-tasks-design-actions.md
         - name: 'Procedura dettagliata: Serializzare raccolte di tipi standard'
           href: serializing-collections-designerserializationvisibilityattribute.md
