--- a/docs/core/compatibility/toc.yml
+++ b/docs/core/compatibility/toc.yml
@@ -7,6 +7,8 @@
 - name: Per versione
   expanded: true
   items:
+    - name: Da 3.1 a 5.0
+      href: 3.1-5.0.md
     - name: Da 3.0 a 3.1
       href: 3.0-3.1.md
     - name: Da 2.2 a 3.1
