--- a/docs/index.yml
+++ b/docs/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: BillWagner
   ms.author: wiwagn
   ms.date: 12/19/2019
-  ms.openlocfilehash: 6b23ab2f0214f23d45499fcf8ab7c3f2771be15c
-  ms.sourcegitcommit: 7588136e355e10cbc2582f389c90c127363c02a5
+  ms.openlocfilehash: f0660cf23bcbc6520d7b0d853e1b214dee785300
+  ms.sourcegitcommit: b75a45f0cfe012b71b45dd9bf723adf32369d40c
   ms.translationtype: HT
   ms.contentlocale: it-IT
-  ms.lasthandoff: 03/16/2020
-  ms.locfileid: "79416326"
+  ms.lasthandoff: 03/24/2020
+  ms.locfileid: "80228559"
 highlightedContent:
   items:
   - title: Introduzione a C#. Avvio interattivo rapido.
@@ -80,7 +80,7 @@ conceptualContent:
     - url: standard/components.md
       itemType: concept
       text: Componenti dell'architettura .NET
-    - url: framework/index.md
+    - url: framework/index.yml
       itemType: overview
       text: App .NET Framework (Windows)
   - title: Sviluppare app .NET
