--- a/docs/csharp/toc.yml
+++ b/docs/csharp/toc.yml
@@ -1569,7 +1569,7 @@
               href: language-reference/keywords/by.md
             - name: in
               href: language-reference/keywords/in.md
-    - name: 'Operatori C#'
+    - name: 'Operatori ed espressioni C#'
       items:
         - name: Panoramica
           href: language-reference/operators/index.md
@@ -1589,7 +1589,7 @@
         - name: Operatori di confronto
           href: language-reference/operators/comparison-operators.md
           displayName: '>, <, >=, <=, greater, less'
-        - name: Operatori di accesso ai membri
+        - name: Espressioni e operatori di accesso ai membri
           href: language-reference/operators/member-access-operators.md
           displayName: '., [], ?., ?[], (), indexer, null-conditional, Elvis, invocation, ^, index from end, hat, .., range'
         - name: Operatori di cast e di test del tipo
@@ -1625,24 +1625,29 @@
         - name: ':: (operatore)'
           href: language-reference/operators/namespace-alias-qualifier.md
           displayName: 'namespace alias qualifier, global namespace'
-        - name: Operatore await
+        - name: await (operatore)
           href: language-reference/operators/await.md
           displayName: async
-        - name: operatore default
+        - name: espressioni con valore predefinito
           href: language-reference/operators/default.md
-          displayName: 'default value, default literal, type default'
+          displayName: 'default value, default operator, default literal, type default'
         - name: Operatore delegate
           href: language-reference/operators/delegate-operator.md
           displayName: anonymous
-        - name: Operatore nameof
+        - name: Espressione nameof
           href: language-reference/operators/nameof.md
+          displayName: nameof operator
         - name: Operatore new
           href: language-reference/operators/new-operator.md
           displayName: constructor
         - name: Operatore sizeof
           href: language-reference/operators/sizeof.md
-        - name: Operatore stackalloc
+        - name: Espressione stackalloc
           href: language-reference/operators/stackalloc.md
+          displayName: 'stack allocation, span, stackalloc operator'
+        - name: Espressione switch
+          href: language-reference/operators/switch-expression.md
+          displayName: 'switch, pattern matching, patterns'
         - name: Operatori true e false
           href: language-reference/operators/true-false-operators.md
         - name: Overload degli operatori
