--- a/docs/standard/assembly/toc.yml
+++ b/docs/standard/assembly/toc.yml
@@ -64,3 +64,5 @@
   href: load-unload.md
 - name: 'Procedura dettagliata: Incorporare i tipi da assembly gestiti in Visual Studio'
   href: embed-types-visual-studio.md
+- name: Esaminare il contenuto di assembly con MetadataLoadContext
+  href: inspect-contents-using-metadataloadcontext.md
