--- a/docs/csharp/toc.yml
+++ b/docs/csharp/toc.yml
@@ -1328,7 +1328,7 @@
                   displayName: 'enum, bit flags, bit field'
                 - name: Tipi di struttura
                   href: language-reference/builtin-types/struct.md
-                  displayName: struct type
+                  displayName: 'struct type, readonly'
                 - name: Tipi valore nullable
                   href: language-reference/builtin-types/nullable-value-types.md
                   displayName: '? token, ? symbol'
