--- a/docs/spark/toc.yml
+++ b/docs/spark/toc.yml
@@ -21,6 +21,8 @@
       href: tutorials/batch-processing.md
     - name: Flussi strutturati
       href: tutorials/streaming.md
+    - name: Analisi del sentiment
+      href: tutorials/ml-sentiment-analysis.md
 - name: Guide pratiche
   items:
     - name: Eseguire il debug dell'applicazione
