--- a/docs/standard/toc.yml
+++ b/docs/standard/toc.yml
@@ -1,4 +1,4 @@
-- name: Guida a .NET Standard
+- name: Documentazione di .NET
   href: index.md
 - name: Introduzione a .NET
   href: get-started.md
@@ -6,50 +6,186 @@
   href: tour.md
 - name: Componenti dell'architettura .NET
   href: components.md
-- name: .NET Standard
+- name: Panoramica di .NET Standard
   href: net-standard.md
-  items:
-    - name: Novità di .NET Standard
-      href: whats-new/whats-new-in-dotnet-standard.md
+- name: Novità di .NET Standard
+  href: whats-new/whats-new-in-dotnet-standard.md
 - name: Framework di destinazione
   href: frameworks.md
 - name: Glossario .NET
   href: glossary.md
 - name: Linee guida per le librerie open source
   href: library-guidance/
-- name: Scelta di .NET Core o .NET Framework per le app server
+- name: Scegliere tra .NET Core e .NET Framework per le app server
   href: choosing-core-framework-server.md
-- name: Informazioni sul codice gestito
-  href: managed-code.md
+- name: Codice gestito
   items:
-    - name: Automatic Memory Management
+    - name: Informazioni sul codice gestito
+      href: managed-code.md
+    - name: Gestione automatica della memoria
       href: automatic-memory-management.md
 - name: Common Language Runtime (CLR)
   href: clr.md
 - name: Indipendenza dal linguaggio
-  href: language-independence.md
   items:
-    - name: Indipendenza del linguaggio e componenti indipendenti dal linguaggio
+    - name: Panoramica
+      href: language-independence.md
+    - name: Componenti indipendenti dal linguaggio
       href: language-independence-and-language-independent-components.md
 - name: Librerie del framework
-  href: framework-libraries.md
   items:
-    - name: Cenni preliminari sulla libreria di classi
+    - name: Panoramica
+      href: framework-libraries.md
+    - name: Panoramica della libreria di classi
       href: class-library-overview.md
-    - name: Tipi base
-      href: base-types/
+    - name: Utilizzare i tipi di base
+      items:
+        - name: Common Type System
+          href: base-types/common-type-system.md
+        - name: Conversione di tipi in .NET
+          href: base-types/type-conversion.md
+        - name: Tabelle di conversione dei tipi
+          href: base-types/conversion-tables.md
+        - name: 'Formattare numeri, date, altri tipi'
+          items:
+            - name: Panoramica
+              href: base-types/formatting-types.md
+            - name: Stringhe di formato numerico standard
+              href: base-types/standard-numeric-format-strings.md
+            - name: Stringhe in formato numerico personalizzato
+              href: base-types/custom-numeric-format-strings.md
+            - name: Stringhe di formato di data e ora standard
+              href: base-types/standard-date-and-time-format-strings.md
+            - name: Stringhe di formato di data e ora personalizzato
+              href: base-types/custom-date-and-time-format-strings.md
+            - name: Stringhe di formato TimeSpan standard
+              href: base-types/standard-timespan-format-strings.md
+            - name: Stringhe in formato TimeSpan personalizzato
+              href: base-types/custom-timespan-format-strings.md
+            - name: Stringhe di formato di enumerazione
+              href: base-types/enumeration-format-strings.md
+            - name: Formattazione composita
+              href: base-types/composite-formatting.md
+            - name: Procedure
+              items:
+                - name: Aggiungere zeri iniziali a un numero
+                  href: base-types/how-to-pad-a-number-with-leading-zeros.md
+                - name: Estrarre il giorno della settimana da una data
+                  href: base-types/how-to-extract-the-day-of-the-week-from-a-specific-date.md
+                - name: Usare provider di formati numerici personalizzati
+                  href: base-types/how-to-define-and-use-custom-numeric-format-providers.md
+                - name: Valori di data e ora round trip
+                  href: base-types/how-to-round-trip-date-and-time-values.md
+                - name: Visualizzare i millisecondi nei valori di data e ora
+                  href: base-types/how-to-display-milliseconds-in-date-and-time-values.md
+                - name: Visualizzare le date in calendari non gregoriani
+                  href: base-types/how-to-display-dates-in-non-gregorian-calendars.md
+        - name: Modificare le stringhe
+          items:
+            - name: Procedure consigliate per l'uso delle stringhe
+              href: base-types/best-practices-strings.md
+            - name: Operazioni di base su stringhe
+              items:
+                - name: Panoramica
+                  href: base-types/basic-string-operations.md
+                  displayName: string operations
+                - name: Creare nuove stringhe
+                  href: base-types/creating-new.md
+                - name: Tagliare e rimuovere caratteri
+                  href: base-types/trimming.md
+                - name: Riempire stringhe
+                  href: base-types/padding.md
+                - name: Confrontare le stringhe
+                  href: base-types/comparing.md
+                - name: Modificare la combinazione di maiuscole/minuscole
+                  href: base-types/changing-case.md
+                - name: Usare la classe StringBuilder
+                  href: base-types/stringbuilder.md
+                - name: 'Procedura: Eseguire modifiche di base delle stringhe'
+                  href: base-types/basic-manipulations.md
+            - name: Espressioni regolari in .NET
+              items:
+                - name: Panoramica
+                  href: base-types/regular-expressions.md
+                  displayName: regular expressions
+                - name: Riferimenti per il linguaggio
+                  items:
+                    - name: Panoramica
+                      href: base-types/regular-expression-language-quick-reference.md
+                    - name: Caratteri di escape
+                      href: base-types/character-escapes-in-regular-expressions.md
+                    - name: Classi di caratteri
+                      href: base-types/character-classes-in-regular-expressions.md
+                    - name: Ancoraggi
+                      href: base-types/anchors-in-regular-expressions.md
+                    - name: Costrutti di raggruppamento
+                      href: base-types/grouping-constructs-in-regular-expressions.md
+                    - name: Quantificatori
+                      href: base-types/quantifiers-in-regular-expressions.md
+                    - name: Costrutti di backreference
+                      href: base-types/backreference-constructs-in-regular-expressions.md
+                    - name: Costrutti di alternanza
+                      href: base-types/alternation-constructs-in-regular-expressions.md
+                    - name: Sostituzioni
+                      href: base-types/substitutions-in-regular-expressions.md
+                    - name: Opzioni di espressione regolare
+                      href: base-types/regular-expression-options.md
+                    - name: Costrutti vari
+                      href: base-types/miscellaneous-constructs-in-regular-expressions.md
+                - name: Procedure consigliate per le espressioni regolari
+                  href: base-types/best-practices.md
+                - name: Modello a oggetti delle espressioni regolari
+                  href: base-types/the-regular-expression-object-model.md
+                - name: Comportamento delle espressioni regolari
+                  items:
+                    - name: Panoramica
+                      href: base-types/details-of-regular-expression-behavior.md
+                    - name: Backtracking
+                      href: base-types/backtracking-in-regular-expressions.md
+                    - name: Compilazione e riutilizzo
+                      href: base-types/compilation-and-reuse-in-regular-expressions.md
+                    - name: Thread safety
+                      href: base-types/thread-safety-in-regular-expressions.md
+                - name: Esempi
+                  items:
+                    - name: Cercare HREF
+                      href: base-types/regular-expression-example-scanning-for-hrefs.md
+                    - name: Modificare i formati di data
+                      href: base-types/regular-expression-example-changing-date-formats.md
+                    - name: Estrarre un protocollo e un numero di porta da un URL
+                      href: base-types/how-to-extract-a-protocol-and-port-number-from-a-url.md
+                    - name: Rimuovere caratteri non validi da una stringa
+                      href: base-types/how-to-strip-invalid-characters-from-a-string.md
+                    - name: Verificare che le stringhe siano nel formato di posta elettronica valido
+                      href: base-types/how-to-verify-that-strings-are-in-valid-email-format.md
+        - name: Codifica dei caratteri in .NET
+          href: base-types/character-encoding-introduction.md
+        - name: Come usare le classi di codifica caratteri
+          href: base-types/character-encoding.md
+        - name: Analizzare le stringhe
+          items:
+            - name: Panoramica
+              href: base-types/parsing-strings.md
+            - name: Analizzare stringhe numeriche
+              href: base-types/parsing-numeric.md
+            - name: Analizzare stringhe di data e ora
+              href: base-types/parsing-datetime.md
+            - name: Analizzare altre stringhe
+              href: base-types/parsing-other.md
 - name: Librerie di classi .NET
   href: class-libraries.md
 - name: Analizzatori
-  href: analyzers/index.md
   items:
+    - name: Panoramica
+      href: analyzers/index.md
+      displayName: analyzers
     - name: API Analyzer
       href: analyzers/api-analyzer.md
     - name: Portability Analyzer
       href: analyzers/portability-analyzer.md
     - name: Framework Analyzer
       href: analyzers/framework-analyzer.md
-- name: Gestione e generazione di eccezioni
+- name: Gestione delle eccezioni
   href: exceptions/
 - name: Assembly in .NET
   href: assembly/
@@ -64,11 +200,14 @@
 - name: Common Type System e Common Language Specification
   href: common-type-system.md
 - name: 'Elaborazione parallela, concorrenza e programmazione asincrona'
-  href: parallel-processing-and-concurrency.md
   items:
+    - name: Panoramica
+      href: parallel-processing-and-concurrency.md
+      displayName: 'Parallel processing, concurrency, async'
     - name: Programmazione asincrona
-      href: async.md
       items:
+        - name: Panoramica
+          href: async.md
         - name: Programmazione asincrona in dettaglio
           href: async-in-depth.md
         - name: Modelli di programmazione asincrona
@@ -78,38 +217,45 @@
     - name: Threading
       href: threading/
 - name: Tipi correlati alla memoria e agli intervalli
-  href: memory-and-spans/index.md
   items:
+    - name: Panoramica
+      href: memory-and-spans/index.md
     - name: Linee guida per l'utilizzo di Memory<T> e Span<T>
       href: memory-and-spans/memory-t-usage-guidelines.md
 - name: Interoperabilità nativa
-  href: native-interop/index.md
   items:
+    - name: Panoramica
+      href: native-interop/index.md
+      displayName: Native interop
     - name: P/Invoke
       href: native-interop/pinvoke.md
     - name: Marshalling dei tipi
       href: native-interop/type-marshaling.md
-    - name: Personalizzazione del marshalling delle strutture
+    - name: Personalizzare il marshalling delle strutture
       href: native-interop/customize-struct-marshaling.md
-    - name: Personalizzazione del marshalling dei parametri
+    - name: Personalizzare il marshalling dei parametri
       href: native-interop/customize-parameter-marshaling.md
     - name: Linee guida per l'interoperabilità
       href: native-interop/best-practices.md
     - name: Set di caratteri e marshalling
       href: native-interop/charset.md
-    - name: Interoperabilità COM
-      href: native-interop/cominterop.md
+    - name: interoperabilità COM
       items:
+        - name: Panoramica
+          href: native-interop/cominterop.md
+          displayName: COM interop
         - name: Wrapper COM
-          href: native-interop/com-wrappers.md
           items:
+            - name: Panoramica
+              href: native-interop/com-wrappers.md
+              displayName: COM wrappers
             - name: Runtime Callable Wrapper
               href: native-interop/runtime-callable-wrapper.md
             - name: COM Callable Wrapper
               href: native-interop/com-callable-wrapper.md
         - name: Qualificazione di tipi .NET per l'interoperabilità COM
           href: native-interop/qualify-net-types-for-interoperation.md
-    - name: Applicazione di attributi di interoperabilità
+    - name: Applicare gli attributi di interoperabilità
       href: native-interop/apply-interop-attributes.md
     - name: Eccezioni
       href: native-interop/exceptions-interoperability.md
@@ -119,31 +265,29 @@
   href: numerics.md
 - name: 'Date, ore e fusi orari'
   href: datetime/
-- name: eventi
+- name: Events
   href: events/
-- name: processo di esecuzione gestita
+- name: Processo di esecuzione gestita
   href: managed-execution-process.md
 - name: Metadati e componenti auto-descrittivi
   href: metadata-and-self-describing-components.md
-- name: Compilazione di applicazioni console
+- name: Creare app console
   href: building-console-apps.md
-- name: Concetti di base sulle applicazioni
-  href: application-essentials.md
 - name: I/O di file e di flussi
   href: io/index.md
 - name: Globalizzazione e localizzazione
   href: globalization-localization/
 - name: Attributi
   href: attributes/
-- name: Linee guida per la progettazione di Framework
+- name: Linee guida per la progettazione di framework
   href: design-guidelines/
 - name: Microsoft.Data.Sqlite
   href: data/sqlite/
 - name: Documenti e dati XML
   href: data/xml/
-- name: Sicurezza
+- name: Security
   href: security/
 - name: Serializzazione
   href: serialization/
-- name: Sviluppo per piattaforme multiple
+- name: Sviluppare per piattaforme multiple
   href: cross-platform/
