--- a/docs/csharp/toc.yml
+++ b/docs/csharp/toc.yml
@@ -1343,6 +1343,9 @@
                   href: language-reference/keywords/class.md
                 - name: interfaccia
                   href: language-reference/keywords/interface.md
+                - name: Tipi riferimento nullable
+                  href: language-reference/builtin-types/nullable-reference-types.md
+                  displayName: '? token, ? symbol'
             - name: void
               href: language-reference/builtin-types/void.md
             - name: var
