--- a/docs/framework/wpf/data/toc.yml
+++ b/docs/framework/wpf/data/toc.yml
@@ -80,8 +80,6 @@
       href: how-to-clear-bindings.md
     - name: Trovare elementi generati da un oggetto DataTemplate
       href: how-to-find-datatemplate-generated-elements.md
-    - name: Eseguire il binding a un servizio Web
-      href: how-to-bind-to-a-web-service.md
 - name: Data binding con LINQ to XML
   items:
     - name: Panoramica
@@ -93,7 +91,7 @@
           href: linq-to-xml-dynamic-properties.md
         - name: Proprietà dinamiche XAttribute
           items:
-            - name: Value
+            - name: Valore
               href: value-xattribute-dynamic-property.md
         - name: Proprietà dinamiche XElement
           items:
@@ -105,7 +103,7 @@
               href: elements-xelement-dynamic-property.md
             - name: Discendenti
               href: descendants-xelement-dynamic-property.md
-            - name: Value
+            - name: Valore
               href: value-xelement-dynamic-property.md
             - name: Xml
               href: xml-xelement-dynamic-property.md
