commit translated contents

--- a/docs/core/compatibility/toc.yml
+++ b/docs/core/compatibility/toc.yml
@@ -30,7 +30,7 @@
   items:
     - name: ASP.NET Core
       href: aspnetcore.md
-    - name: CoreFx
+    - name: Principali librerie .NET
       href: corefx.md
     - name: Crittografia
       href: cryptography.md
