--- a/docs/visual-basic/reference/language-specification/toc.yml
+++ b/docs/visual-basic/reference/language-specification/toc.yml
@@ -19,7 +19,7 @@
       href: ../../../../_vblang/spec/conversions.md
     - name: Membri dei tipi
       href: ../../../../_vblang/spec/type-members.md
-    - name: Statements (Istruzioni)
+    - name: Istruzioni
       href: ../../../../_vblang/spec/statements.md
     - name: Espressioni
       href: ../../../../_vblang/spec/expressions.md
